# aipo-projekt

./: .gitignore  .gitmodules  README.md  main.py  osm_cache.db  requirements.txt
identifying-text-objects/: main.py  pyproject.toml
src/: map.py  openalpr_tesseract_install.sh  osm_cache.db  requirements.txt
src/gui/: map.py
src/logic/: analysis.py  countries.yaml  prawolewo.py  requirements.txt  text_objects_detection.py  traffic_side_classifier.pkl
src/logic/keywords/: ekstrakcja_slow_kluczowych.py
src/logic/lang_detect/: language_countries.py  language_detection.py  requirements.txt  translate_phrases.py
src/logic/leftright/: countries.yaml  prawolewo.py
src/logic/leftright/model/: model.py
src/logic/leftright/utils/: common.py
src/logic/ocr/: binarization.py  ocr.py  perspective_corr_box.py  perspective_correction.py  pipeline.py  tesocr.py  utils.py
src/logic/osm/: caching.py  countries.py  open_street_maps.py  requirements.txt
src/logic/textdetection/: __init__.py  api_client.py  deferred_glpd.py  glpd_recognizer.py  object_detector.py  plate_analyzer.py  plate_recognizer.py  road_sign_analyzer.py  text_classifier.py  text_extractor.py  text_objects_detection.py
src/logic/textdetection/config/: api_config.yaml  deferred_glpd_config.json  glpd_config.json  pattern_cache.json
